[package]
name = "power-process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading", 
    "Win32_Storage_FileSystem", 
    "Win32_System_SystemInformation",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_Security_Cryptography",
    "Win32_System_Console",
    "Win32_System_WindowsProgramming",
    
]}
cvt = "0.1.2"
libc = "0.2.147"